# project

./: .gitignore  .replit  AUTO_CRUD_README.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
attached_assets/: Pasted--15-The-source-list-for-the-Content-Security-Policy-directive-default-src-contains-an-invalid-so-1760794134877_1760794134882.txt  Pasted--Data-simulator-started-successfully-Server-running-on-port-5000-WebSocket-client-connected-Client--1760602282915_1760602282920.txt  Pasted--replit-fullstack-dashboard-0-0-0-dev-tsx-watch-clear-screen-false-ignore-vite-config-ts-i-1760602521086_1760602521090.txt  Pasted--replit-fullstack-dashboard-0-0-0-dev-tsx-watch-clear-screen-false-ignore-vite-config-ts-i-1760620904817_1760620904821.txt  Pasted--resource-home-smdydx-Downloads-LCRAdmin-project-client-src-components-pages-Dashboard-tsx--1760708897592_1760708897598.txt  Pasted-2025-10-15-19-00-16-134-main-INFO-Starting-Admin-Dashboard-API-v1-0-0-2025-10-15-19-00-16--1760554942922_1760554942925.txt  Pasted-2025-10-15-19-03-48-093-main-INFO-Starting-Admin-Dashboard-API-v1-0-0-2025-10-15-19-03-48--1760555073480_1760555073484.txt  Pasted-Bilkul-main-tumhare-likhe-hue-concept-ko-samajh-ke-apni-language-mein-clearly-summarise-karta-h-1761262133248_1761262133250.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-smdydx-Down-1760643911056_1760643911060.txt  __init___1760593533044.py  auto_loan_1760593533042.py  banner_1760593533043.py  (+20 more)
(+118 files in other folders)
